@@ -1,4 +1,8 @@
 2011-05-22  Robert Larice
+ * src/spicelib/devices/hisim2/hsm2noi.c :
+   hisim2, drop (GENERIC **) NULL pointer casts
+
+2011-05-22  Robert Larice
  * src/spicelib/devices/hisim2/hsm2cvtest.c ,
  * src/spicelib/devices/hisim2/hsm2ld.c :
    hisim2, rename FABS() ->  fabs()
